--- a/components/like/index.wxml
+++ b/components/like/index.wxml
@@ -1,6 +1,5 @@
 <!--components/like/index.wxml-->
-<view class="container">
-    <image src="{{likeImageSrc}}"></image>
-    <image src="{{disLikeImageSrc}}"></image>
+<view bindtap='onLike' class="container">
+    <image src="{{isLike ? likeImageSrc : disLikeImageSrc}}"></image>
     <text>{{likeCount}}</text>
 </view>
