http models 500 error

--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -1,2 +1,2 @@
 <!--pages/classic/classic.wxml-->
-<v-like></v-like>
+<v-like isLike="{{classicObj.like_status}}" likeCount="{{classicObj.fav_nums}}"></v-like>
