--- a/pages/classic/classic.wxss
+++ b/pages/classic/classic.wxss
@@ -1,1 +1,18 @@
 /* pages/classic/classic.wxss */
+.header {
+  display: flex;
+  height: 100rpx;
+  align-items: center;
+  justify-content: space-between;
+  border-top: 1px solid #f5f5f5;
+  border-bottom: 1px solid #f5f5f5;
+}
+
+.header .epsoide {
+  margin-left: 20rpx;
+  margin-top: 4rpx;
+}
+
+.header .like {
+  margin-top: 6rpx;
+}
