--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -1,7 +1,10 @@
 <!--pages/classic/classic.wxml-->
-<view class='header'>
-  <v-epsoide class="epsoide" index="{{classicObj.index}}"></v-epsoide>
-  <v-like class="like" bind:isLike="onLike" isLike="{{classicObj.like_status}}" likeCount="{{classicObj.fav_nums}}"></v-like>
+<view class='container'>
+  <view class='header'>
+    <v-epsoide class="epsoide" index="{{classicObj.index}}"></v-epsoide>
+    <v-like class="like" bind:isLike="onLike" isLike="{{classicObj.like_status}}" likeCount="{{classicObj.fav_nums}}"></v-like>
+  </view>
+  <v-movie image="{{classicObj.image}}" content="{{classicObj.content}}"></v-movie>
+  <v-navi first="{{first}}" latest="latest" title="{{classicObj.title}}"></v-navi>
 </view>
-<v-movie image="{{classicObj.image}}" content="{{classicObj.content}}"></v-movie>
 
