--- a/pages/classic/classic.wxss
+++ b/pages/classic/classic.wxss
@@ -1,5 +1,12 @@
 /* pages/classic/classic.wxss */
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
 .header {
+  width: 100%;
   display: flex;
   height: 100rpx;
   align-items: center;
