--- a/components/navi/navi.wxml
+++ b/components/navi/navi.wxml
@@ -1,6 +1,6 @@
 <!--components/navi/navi.wxml-->
 <view class='container'>
-  <image class='icon' src='{{latest ? disLeftSrc : leftSrc}}'></image>
+  <image bindtap='onLeft' class='icon' src='{{latest ? disLeftSrc : leftSrc}}'></image>
   <text class='title'>{{title}}</text>
-  <image class='icon' src='{{first ? disRightSrc : rightSrc}}'></image>
+  <image bindtap='onRight' class='icon' src='{{first ? disRightSrc : rightSrc}}'></image>
 </view>
