--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -2,7 +2,7 @@
 <view class='container'>
   <view class='header'>
     <v-epsoide class="epsoide" index="{{classicObj.index}}"></v-epsoide>
-    <v-like class="like" bind:isLike="onLike" isLike="{{classicObj.like_status}}" likeCount="{{classicObj.fav_nums}}"></v-like>
+    <v-like class="like" bind:isLike="onLike" isLike="{{isLike}}" likeCount="{{likeCount}}"></v-like>
   </view>
   <v-movie image="{{classicObj.image}}" content="{{classicObj.content}}"></v-movie>
   <v-navi bind:left="onNext" bind:right="onPrevious" class="navi" first="{{first}}" latest="{{latest}}" title="{{classicObj.title}}"></v-navi>
