--- a/components/classic/movie/index.wxml
+++ b/components/classic/movie/index.wxml
@@ -1,5 +1,5 @@
 <!--components/classic/movie/index.wxml-->
-<view class='classic-container'>
+<view hidden='{{hidden}}' class='classic-container'>
   <image class='classic-img' src='{{image}}'></image>
   <image class='classic-tag' src='{{tagIamge}}'></image>
   <text class='classic-content'>{{content}}</text>
