--- a/components/classic/music/index.wxml
+++ b/components/classic/music/index.wxml
@@ -1,5 +1,5 @@
 <!--components/classic/music/index.wxml-->
-<view class="container">
+<view hidden='{{hidden}}' class="container">
     <image src="{{image}}" />
     <image src="{{playSrc}}" />
     <image class="tag" src="images/music@tag.png" />
