--- a/components/classic/essay/index.wxml
+++ b/components/classic/essay/index.wxml
@@ -1,6 +1,6 @@
 <!--components/classic/essay/index.wxml-->
 <view hidden='{{hidden}}' class="classic-container">
-    <image class="classic-img" src="{{img}}"  />
-    <image class="tag" src="images/essay@tag.png" />
-    <text class="content" >{{content}}</text>
+    <image class="classic-img" src="{{image}}"  />
+    <image class="classic-tag" src="images/essay@tag.png" />
+    <text class="classic-content" >{{content}}</text>
 </view>
