--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -4,9 +4,29 @@
     <v-epsoide class="epsoide" index="{{classicObj.index}}"></v-epsoide>
     <v-like class="like" bind:isLike="onLike" isLike="{{isLike}}" likeCount="{{likeCount}}"></v-like>
   </view>
-  <v-movie hidden="{{classicObj.type!==100}}" image="{{classicObj.image}}" content="{{classicObj.content}}"></v-movie>
-  <v-music hidden="{{classicObj.type!==300}}" image="{{classicObj.image}}" content="{{classicObj.content}}"></v-music>
-  <v-essay hidden="{{classicObj.type!==200}}" image="{{classicObj.image}}" content="{{classicObj.content}}"></v-essay>
-  <v-navi bind:left="onNext" bind:right="onPrevious" class="navi" first="{{first}}" latest="{{latest}}" title="{{classicObj.title}}"></v-navi>
+
+  <v-movie hidden="{{classicObj.type!==100}}" 
+    image="{{classicObj.image}}" 
+    content="{{classicObj.content}}">
+  </v-movie>
+
+  <v-music wx:if="{{classicObj.type===200}}" 
+    image="{{classicObj.image}}" 
+    content="{{classicObj.content}}" 
+    musicSrc="{{classicObj.url}}"
+    musicTitle="{{classicObj.title}}"
+  >
+  </v-music>
+
+  <v-essay hidden="{{classicObj.type!==300}}" 
+    image="{{classicObj.image}}" 
+    content="{{classicObj.content}}">
+  </v-essay>
+
+  <v-navi bind:left="onNext" bind:right="onPrevious" class="navi" 
+    first="{{first}}" 
+    latest="{{latest}}" 
+    title="{{classicObj.title}}">
+  </v-navi>
 </view>
 
