--- a/components/book/index.wxml
+++ b/components/book/index.wxml
@@ -1,5 +1,5 @@
 <!--components/book/index.wxml-->
-<view class='container'>
+<view class='container' bindtap='gotoBookDetail'>
   <image src='{{book.image}}'></image>
   <view class='description'>
     <text class='title'>{{book.title}}</text>
