--- a/pages/book/book.wxss
+++ b/pages/book/book.wxss
@@ -1,1 +1,69 @@
 /* pages/book/book.wxss */
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header {
+  width: 100%;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 99;
+  height: 100rpx;
+  background-color: #fff;
+  border-top: 1px solid #f5f5f5;
+  border-bottom: 1px solid #f5f5f5;
+  box-shadow: 0 0 3px 0 #e3e3e3;
+}
+
+.header .box {
+  display: flex;
+  width: 700rpx;
+  height: 68rpx;
+  align-items: center;
+  justify-content: center;
+  background-color: #f5f5f5;
+  border-radius: 50px;
+  color: #999;
+}
+
+.header .box image {
+  width: 14px;
+  height: 14px;
+  margin-right: 10px;
+  margin-top: 2px;
+}
+
+.sub-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 100rpx;
+  background-color: #f5f5f5;
+}
+
+.sub-container .head-img {
+  width: 106rpx;
+  height: 34rpx;
+  margin-top: 40rpx;
+}
+
+.books-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 90rpx;
+  justify-content: space-between;
+}
+
+.books-container v-book:last-child {
+  margin-bottom: 40rpx;
+}
+
+
+
+
+
