--- a/pages/book/book-detail/index.wxml
+++ b/pages/book/book-detail/index.wxml
@@ -1,2 +1,20 @@
 <!--pages/book/book-detail/index.wxml-->
-<text>pages/book/book-detail/index.wxml</text>
+<view class='container'>
+  <view class='head'>
+    <image src='{{bookDetail.image}}'></image>
+    <text class='title'>{{bookDetail.title}}</text>
+    <text class='author'>{{bookDetail.author}}</text>
+  </view>
+  <!-- 短评 -->
+  <view class='sub-container'>
+    <text class='headline'>短评</text>
+    <view class='comments-container'>
+      <block wx:for="{{comments}}" wx:key="content">
+        <v-tag text="{{item.content}}">
+          <text slot="after" class='num'>+{{item.nums}}</text>
+        </v-tag>
+        
+      </block>
+    </view>
+  </view>
+</view>
