--- a/pages/book/book-detail/index.wxss
+++ b/pages/book/book-detail/index.wxss
@@ -1,1 +1,63 @@
 /* pages/book/book-detail/index.wxss */
+.container {
+  background-color: #f5f5f5;
+}
+
+.head {
+  background-color: #fff;
+  padding: 40rpx 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.head .title {
+  color: #2f2f2f;
+  margin-top: 20rpx;
+  font-size: 38rpx;
+  font-weight: 600;
+}
+
+.head .author {
+  font-size: 28rpx;
+  color: #999;
+}
+
+.head image {
+  width: 200rpx;
+  height: 300rpx;
+  box-shadow: 2px 2px 3px #e3e3e3;
+}
+
+.sub-container {
+  width: 690rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 30rpx;
+  padding: 30rpx;
+  background-color: #fff;
+}
+
+.sub-container .headline {
+  font-size: 30rpx;
+  font-weight: 600;
+  color: #2f2f2f;
+  margin-bottom: 20rpx;
+}
+
+.comments-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.comments-container v-tag {
+  margin-right: 15rpx;
+  margin-bottom: 10rpx;
+}
+
+.comments-container .num {
+  margin-left: 5px;
+  font-size: 22rpx;
+  color: #aaa;
+}
