--- a/pages/book/book.wxml
+++ b/pages/book/book.wxml
@@ -11,7 +11,7 @@
     <image class='head-img' src='/images/book/quality.png'></image>
     <view class='books-container'>
       <block wx:for="{{bookList}}" wx:key="id">
-        <v-book book="{{item}}"></v-book>
+        <v-book bind:sendBookId="getBookId" book="{{item}}"></v-book>
       </block>
     </view>
   </view>
