--- a/components/tag/index.wxml
+++ b/components/tag/index.wxml
@@ -1,5 +1,5 @@
 <!--components/tag/index.wxml-->
-<view class='container'>
+<view class='container my-tag'>
   <text>{{text}}</text>
   <slot name="after"></slot>
 </view>
