--- a/pages/book/book-detail/index.wxml
+++ b/pages/book/book-detail/index.wxml
@@ -10,7 +10,7 @@
   <view class='sub-container'>
     <text class='headline'>短评</text>
     <view class='comments-container'>
-      <block wx:for="{{comments}}" wx:key="content">
+      <block wx:for="{{filter.limit(comments, 10)}}" wx:key="content">
         <v-tag my-tag="{{index ===0 ? 'ex-tag1' : (index === 1 ? 'ex-tag2' : '')}}" text="{{item.content}}">
           <text slot="after" class='num'>+{{item.nums}}</text>
         </v-tag>
@@ -21,5 +21,38 @@
   <view class='sub-container'>
     <text class='headline'>内容简介</text>
     <text class='content' decode="true">{{filter.format(bookDetail.summary)}}</text>
+  </view>
+  <!-- 书本信息 -->
+  <view class='sub-container'>
+    <text class='headline'>书本信息</text>
+    <view class="detail-container">
+        <view class="vertical description">
+            <text>出版社</text>
+            <text>出版年</text>
+            <text>页数</text>
+            <text>定价</text>
+            <text>装帧</text>
+        </view>
+        <view class="vertical">
+            <text>{{bookDetail.publisher}}</text>
+            <text>{{bookDetail.pubdate}}</text>
+            <text>{{bookDetail.pages}}</text>
+            <text>{{bookDetail.price}}</text>
+            <text>{{bookDetail.binding}}</text>
+        </view>
+    </view>
+  </view>
+  <!-- 输入短评 -->
+  <view class='post-container'>
+    <view class='post-fake'>
+      <text bindtap='showDialog'>输入短评</text>
+    </view>
+    <view class='like-container'>
+      <v-like bind:isLike="onLike" isLike="{{likeStatus.like_status}}" likeCount="{{likeStatus.fav_nums}}"></v-like>
+    </view>
+  </view>
+  <!-- 短片弹出框 -->
+  <view hidden='{{!isShowingDialog}}' class='posting-container'>
+    <text bindtap='closeDialog'>取消</text>
   </view>
 </view>
