--- a/pages/book/book-detail/index.wxss
+++ b/pages/book/book-detail/index.wxss
@@ -83,3 +83,55 @@
   text-indent: 1em;
   font-weight: 500;
 }
+
+.detail-container {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 100rpx;
+  font-size: 28rpx;
+  color: #666;
+}
+
+.detail-container .vertical {
+  display: flex;
+  flex-direction: column;
+}
+
+.description {
+    color: #999;
+    margin-right: 30rpx;
+}
+
+.post-container {
+  height: 100rpx;
+  position: fixed;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0 30rpx;
+  background-color: #fff;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.post-fake {
+  display: flex;
+  align-items: center;
+  height: 60rpx;
+  width: 460rpx;
+  border: 1px solid #999;
+  border-radius: 15px;
+  font-size: 22rpx;
+  padding-left: 20rpx;
+}
+
+.posting-container {
+  background: #fff;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 500rpx;
+  z-index: 999;
+}
