--- a/utils/filter.wxs
+++ b/utils/filter.wxs
@@ -5,6 +5,11 @@ var format = function(text) {
   }
 }
 
+var limit = function(array, length) {
+  return array.slice(0, length);
+}
+
 module.exports = {
-  format: format
+  format: format,
+  limit: limit
 }
