--- a/pages/book/book-detail/index.wxss
+++ b/pages/book/book-detail/index.wxss
@@ -132,6 +132,52 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 500rpx;
   z-index: 999;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.post-header {
+  width: 100%;
+  border-bottom: 1px solid #f5f5f5;
+  border-top: 1px solid #f5f5f5;
+  height: 100rpx;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.cancel {
+  color: #666;
+}
+
+.post-header text {
+  padding: 25rpx;
+}
+
+.post-header>text:first-child {
+  font-size: 28rpx;
+  color: #bbb;
+}
+
+.posting-container .comment-container {
+  width: 690rpx;
+  padding: 40rpx 30rpx 0 30rpx;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.posting-container .post {
+  width: 690rpx;
+  margin: 30rpx auto;
+  height: 56rpx;
+  background-color: #f5f5f5;
+  border-radius: 15px;
+  padding-left: 25rpx;
+}
+
+.no-comment {
+  color: #999;
 }
