--- a/components/search/index.wxss
+++ b/components/search/index.wxss
@@ -1,10 +1,6 @@
 /* components/search/index.wxss */
 .container {
-  position: fixed;
   width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
   background-color: #fff;
   z-index: 1000;
   display: flex;
@@ -20,6 +16,8 @@
   border-bottom: 1px solid #f5f5f5;
   display: flex;
   align-items: center;  
+  background-color: #fff;
+  z-index: 999;
 }
 
 .search-container {
@@ -82,4 +80,37 @@
   width: 10rpx;
   background-color: #000;
   margin-right: 20rpx;
+}
+
+.tags {
+    /* padding-left:15px; */
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 24rpx;
+    padding-left: 30rpx;
+    width: 630rpx;
+}
+
+.tags v-tag {
+    margin-right: 20rpx;
+    margin-bottom: 20rpx;
+}
+
+.books-container {
+    width: 570rpx;
+    margin-top: 100rpx;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 90rpx 0 90rpx;
+    justify-content: space-between;
+}
+
+.books-container v-book {
+    margin-bottom: 25rpx;
+}
+
+.books-container .no-books {
+  margin: 100rpx;
+  width: 100%;
+  text-align: center;
 }
