--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -1,2 +1,20 @@
 <!--pages/my/my.wxml-->
-<text>pages/my/my.wxml</text>
+<view class="container">
+    <image src="/images/my/my@bg.png" class="bg"></image>
+    <!-- <open-data type="userAvatarUrl" class="avatar avatar-position"></open-data> -->
+    <button wx:if="{{!authorized}}" plain="true" open-type="getUserInfo" bindgetuserinfo="onGetUserInfo" class='avatar-position'>
+      <image class='avatar' src="../../images/my/my.png"></image>
+    </button>
+    <view wx:if="{{authorized}}" class="avatar-position">
+      <image class='avatar' src='{{userInfo.avatarUrl}}'></image>
+    </view>
+    <view class="about-container">
+        <view class="about-us">
+            <image src="/images/my/about.png" />
+            <text class="description">关于我们</text>
+        </view>
+        <view class="about-us">
+            <text class="description">喜欢的书</text>
+        </view>
+    </view>
+</view>
