--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -2,7 +2,12 @@
 <view class='container'>
   <view class='header'>
     <v-epsoide class="epsoide" index="{{classicObj.index}}"></v-epsoide>
-    <v-like class="like" bind:isLike="onLike" isLike="{{isLike}}" likeCount="{{likeCount}}"></v-like>
+    <view class='header-right'>
+      <v-like class="like" bind:isLike="onLike" isLike="{{isLike}}" likeCount="{{likeCount}}"></v-like>
+      <v-button class='share-btn' bind:getUserInfo="onGetUserInfo" openType='share'>
+        <image class='btn-image' slot="img" src='../../images/icon/share.png'></image>
+      </v-button>
+    </view>
   </view>
 
   <v-movie hidden="{{classicObj.type!==100}}" 
